test/tests/stages/16_characters_and_strings/invalid_types/string_initializer_too_long_static.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[19]:
  int
  identifier(main)
  (
  void
  )
  {
  static
  char
  identifier(too_long)
  [
  const int(3)
  ]
  =
  string literal("abcd")
  ;
  return
  const int(0)
  ;
  }
